# llm.rust

./: .gitignore  CONTRIBUTING.md  README.md  prepare_checkpoint.py  prepro_tinyshakespeare.py
attention_forward/attention_blas_rust/: Cargo.toml  build.sh  test
attention_forward/attention_blas_rust/src/: main.rs
attention_forward/attention_blas_rust_second_approach/: Cargo.toml  build.sh
attention_forward/attention_blas_rust_second_approach/src/: main.rs
attention_forward/attention_rust/: Cargo.toml
attention_forward/attention_rust/src/: main.rs
attention_forward/c_code/: attention_forward  build.sh  main.c
layernorm_forward_tests/c_code/: build.sh  layernorm_forward  main.c
layernorm_forward_tests/layernorm_rust/: Cargo.toml
layernorm_forward_tests/layernorm_rust/src/: main.rs
llm/: Cargo.toml  build.sh  debugger.sh
llm/src/: cli.rs  main.rs
matmul/: Cargo.toml  build.sh
matmul/src/: main.rs
matmul_backward_tests/blas_matmul/: Cargo.toml  build.sh  execution_for_plot.sh  plots.py
matmul_backward_tests/blas_matmul/src/: main.rs
matmul_backward_tests/c_code/: build.sh  matmul_back.c
matmul_backward_tests/rayon_matmul/: build.sh
matmul_backward_tests/rayon_matmul/src/: main.rs
matmul_backward_tests/standard_matmul/: build.sh
matmul_backward_tests/standard_matmul/src/: main.rs
matmul_tests/blas_matmul/: build.sh
matmul_tests/blas_matmul/src/: main.rs
matmul_tests/c_code/: build.sh  matmul_example.c
matmul_tests/rayon_matmul/: Cargo.toml
matmul_tests/standard_matmul/: Cargo.toml  build.sh
rayon_matmul/: build.sh
(+2 files in other folders)
