[package]
name = "llm"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.4"
bytemuck = "1.16.0"
time = "0.3.36"
rayon = "1.5"
ndarray = { version = "0.16.1", features = ["rayon"] }
blas-src = { version = "0.10.0", features = ["accelerate"] }
cblas = "0.4.0"

[profile.release]
lto = true
codegen-units = 1
incremental = false
overflow-checks = false
debug-assertions = false
opt-level = 3
