[package]
name = "attention_blas_rust_second_approach"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.5"
ndarray = { version = "0.16.1", features = ["rayon"] }
blas-src = { version = "0.9", features = ["accelerate"] }
cblas = "0.4.0"
clap = { version = "4.4.0", features = ["derive"] }
serde_json = "1.0.132"